# obsidian-mcp

./: .env.example  .gitignore  .obsidian-mcp.config.example.json  LICENSE  MIGRATION.md  PROJECT-CONTEXT.md  README.md  pyproject.toml  test_server.py
.claude/: phase-1.md  phase-2.5.md  phase-2.6.md  phase-2.md  phase-3.5md  phase-3.6.md  phase-3.7.md  phase-3.md  phase-4.md
src/markdown_vault_mcp/: __init__.py  server.py  vault.py
src/obsidian_mcp/: __init__.py  server.py  vault.py
templates/examples/: JOURNAL.md  MEETING_NOTES.md  RECIPE.md  REFERENCE_DOC.md
