[project]
name = "markdown-vault-mcp"
version = "3.0.0"
description = "Agent-controlled markdown files with frontmatter-based permissions. Works with Obsidian, static site generators, or any folder of .md files."
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "python-dotenv",
    "python-frontmatter",
]

[project.scripts]
markdown-vault-mcp = "markdown_vault_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_vault_mcp"]
